--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,6 +16,7 @@ stages:
   jobs:
   - job: Build
     pool: $(BuildPool)
+    environment: 'Build'
     timeoutInMinutes: 10
     steps:
     - checkout: self
@@ -55,6 +56,7 @@ stages:
     displayName: 'Azure Artifacts'
     condition: ne(variables['Build.Reason'], 'PullRequest')
     pool: $(BuildPool)
+    environment: 'Build'
     variables:
       - group: Sholo Github
     strategy:
