--- a/Source/Sholo.Utils/Sholo.Utils.csproj
+++ b/Source/Sholo.Utils/Sholo.Utils.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup Label="Build">
-    <TargetFrameworks>netstandard2.0;net5.0;net6.0</TargetFrameworks>
+    <TargetFramework>net7.0</TargetFramework>
   </PropertyGroup>
 
   <PropertyGroup Label="Package">
@@ -9,16 +9,17 @@
     <Description>Misc utility functions</Description>
   </PropertyGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' " >
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="[2.1.0,)" />
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="[7.0.0,)" />
+    <PackageReference Include="Microsoft.Extensions.Options.DataAnnotations" Version="[7.0.0,)" />
+    <PackageReference Include="MiniValidation" Version="0.9.0" />
+    <PackageReference Include="NetEscapades.Configuration.Yaml" Version="[3.1.0,4.0.0)" />
+    <PackageReference Include="Serilog.Expressions" Version="[3.4.1,)" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="[3.1.0,)" />
+    <PackageReference Include="Serilog.Settings.Configuration" Version="[7.0.1,)" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="[4.1.0,)" />
+    <PackageReference Include="YamlDotNet" Version="[13.4.0,14.0.0)" />
+    <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="7.0.2" />
   </ItemGroup>
-  
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net5.0' ">
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="[5.0.0,)" />
-  </ItemGroup>
-  
-  <ItemGroup  Condition=" '$(TargetFramework)' == 'net6.0' ">
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="[6.0.0,)" />
-  </ItemGroup>
-  
+
 </Project>
